src/objects/Shipping_Order__c.object
<CustomObject>
    <description>Shipping Order History</description>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Street_Address__c</fullName>
        <formula>Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipping Orders</relationshipLabel>
        <relationshipName>Shipping_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AddPart__c</fullName>
        <label>Add Part</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Address_Postal_Code__c</fullName>
        <formula>Account__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddrforGroundTagPickUp__c</fullName>
        <label>Addr for Ground Tag Pick-Up</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Addrforgroundtagsameasabove__c</fullName>
        <label>Addr for ground tag same as above?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AgingRODays__c</fullName>
        <label>Aging RO Days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attempt_1_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attempt 1 Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempt_2_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attempt 2 Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BrochureListLog__c</fullName>
        <label>Brochure List Log</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMHID__c</fullName>
        <formula>Related_Work_Order__r.CMH_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMHID</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Latest_Service_Date__c</fullName>
        <formula>Related_Work_Order__r.LatestServiceDateEnd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case_Latest Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clinic_ID__c</fullName>
        <formula>Account__r.CMHID__c</formula>
        <label>CMD ID</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactNameGroundTagPickUp__c</fullName>
        <label>Contact Name Ground Tag Pick-Up</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrontabsetVisPlybckoccurs__c</fullName>
        <label>Crontab set VisPlybck occurs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DVDPlayerLog__c</fullName>
        <label>DVD Player Log</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateModified__c</fullName>
        <label>Date Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateRecvgOrderclosedout__c</fullName>
        <label>Date Recvg Order closed out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_pickup__c</fullName>
        <label>Date of pickup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dateofpickup__c</fullName>
        <label>Date of pick-up</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment_Prep_Deadline__c</fullName>
        <label>Equipment Prep Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equippickedupfromsite__c</fullName>
        <label>Equip picked up from site</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempt 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempt 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempt 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label sent to tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ernesto_TabletErnesto_Pre_Prepped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PC Prepped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedite_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedite_Approver_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expedite Approver User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shipping_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expedite_Reason__c</fullName>
        <label>Expedite Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expedite_Time__c</fullName>
        <label>Expedite Time</label>
        <picklist>
            <picklistValues>
                <fullName>1 day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FedExClaimFiled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FedEx Claim Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_GB_on_tablet__c</fullName>
        <label>Free GB on tablet</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HDMIcableshipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HDMI cable shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HrsfromCreationtoShipped__c</fullName>
        <label># Hrs from Creation to Shipped</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemsChecklistInstrPacked__c</fullName>
        <label>Items Checklist Instr. Packed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KensingtonLock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kensington Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemPracCompetitorSwitchout__c</fullName>
        <label>Mem Prac Competitor Switchout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemPracEquipmentReportLink__c</fullName>
        <label>MemPracEquipment (Report Link)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemPracNetworkBanner1__c</fullName>
        <label>MemPrac - Network Banner #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemPracNetworkBanner2__c</fullName>
        <label>MemPrac - Network Banner #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemPracNetworkBanner3__c</fullName>
        <label>Mem Prac - Network Banner #3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemPracTransitTime1__c</fullName>
        <label>Mem Prac Transit Time +1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemPracZipCodeDataTransitTime__c</fullName>
        <label>MemPracZip Code DataTransit Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemPracZipCodeEstArrDate__c</fullName>
        <label>MemPrac Zip CodeEstArrDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MemberPracticeTimezone__c</fullName>
        <label>Member Practice Timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberPracticeZipCode__c</fullName>
        <label>Member Practice Zip Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeCity__c</fullName>
        <label>Member practice - City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeContactName__c</fullName>
        <label>Member practice - Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeDHNID2__c</fullName>
        <label>Member practice - DHN ID2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeDHNID__c</fullName>
        <label>Member practice - DHN ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberpracticeEmailaddress__c</fullName>
        <label>Member practice - Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MemberpracticeMSE__c</fullName>
        <label>Member practice - MSE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeNetwork__c</fullName>
        <label>Member practice - Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticePediatric2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member practice - Pediatric2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MemberpracticePhone__c</fullName>
        <label>Member practice - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MemberpracticePrimaryName__c</fullName>
        <label>Member practice - Primary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeRmSte__c</fullName>
        <label>Member practice - Rm/Ste #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeState__c</fullName>
        <label>Member practice - State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeStreet__c</fullName>
        <label>Member practice - Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberpracticeZip__c</fullName>
        <label>Member practice - Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MempracControlCableMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mem prac Control Cable Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MempracInsulinSponsor__c</fullName>
        <label>Mem prac Insulin Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MempracKensingtonLockSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MempracKensington Lock System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MempracTotalEquipmentCost__c</fullName>
        <label>MempracTotal Equipment Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mountoptionnoteincluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mount option note included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Deployment__c</fullName>
        <formula>text(Account__r.Network_Deployment__c)</formula>
        <label>Network Deployment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <formula>IF ( INCLUDES ( Account__r.Network__c , &quot;Heart&quot; ), &quot;Heart; &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Network__c , &quot;Diabetes&quot; ), &quot;Diabetes; &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Network__c , &quot;Neuro&quot; ), &quot;Neuro; &quot;,null ) &amp; 
IF ( INCLUDES ( Account__r.Network__c , &quot;Rheumatoid&quot; ), &quot;Rheumatoid; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.Network__c , &quot;CMH&quot; ), &quot;Diabetes; &quot;,null ) &amp;
IF ( INCLUDES ( Account__r.Network__c , &quot;GI&quot; ), &quot;GI; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offset_DST__c</fullName>
        <formula>Account__r.OFFSET_DST_c__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offset DST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offset_ST__c</fullName>
        <formula>Account__r.offset_st__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offset ST</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherCity__c</fullName>
        <label>Other City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherReceiverName__c</fullName>
        <label>Other Receiver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherState__c</fullName>
        <label>Other State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherStreet__c</fullName>
        <label>Other Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherZip__c</fullName>
        <label>Other Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCTVAssigned__c</fullName>
        <label>PC &amp; TV Assigned</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCTVShipLog__c</fullName>
        <label>PC/TV Ship Log</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shipping Orders (Part 1)</relationshipLabel>
        <relationshipName>Shipping_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shipping Orders (Part 2)</relationshipLabel>
        <relationshipName>Shipping_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part 3</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shipping Orders (Part 3)</relationshipLabel>
        <relationshipName>Shipping_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playersettocorrectinsulinsponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Player set to correct insulin sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Playersettocorrecttimezone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Player set to correct timezone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plugcoverwithinstructincluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plug cover with instruct included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Shipping Orders</relationshipLabel>
        <relationshipName>Shipping_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuickBase_ID__c</fullName>
        <label>QuickBase ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSLLog__c</fullName>
        <label>RSL Log</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_equipment_is_being_returned__c</fullName>
        <label>Reason equipment is being returned:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivedDate__c</fullName>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReceivingOrderClosedOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receiving Order Closed Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receiving_FedEx_Tracking__c</fullName>
        <label>Receiving FedEx Tracking #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_USPS_Tracking__c</fullName>
        <label>Receiving USPS Tracking #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Account__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Recipient Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <formula>Account__r.Primary_Contact__r.Email</formula>
        <label>Recipient Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Recipient Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <formula>Account__r.Primary_Contact__r.FirstName &amp; &quot; &quot; &amp;  Account__r.Primary_Contact__r.LastName</formula>
        <label>Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordOwner__c</fullName>
        <label>Record Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecvgOrderStatus__c</fullName>
        <label>Recvg Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>All equipment returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial equipment returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment lost/stolen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for next repair date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic, no work order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither (type info in Other)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegisteredwithLandscape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered with Landscape</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelMempracLastServDatef__c</fullName>
        <label>Rel Mem prac Last Serv Date-f</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RelMempracLastServiceDatef2__c</fullName>
        <label>Rel Mem prac - Last Service Date-f2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Related_Work_Order_Type__c</fullName>
        <formula>Text( Related_Work_Order__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Work Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Work Order</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Shipping Orders</relationshipLabel>
        <relationshipName>Shipping_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReqDateofEquipPickup__c</fullName>
        <label>Req Date of Equip Pick-up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedDateofArrival__c</fullName>
        <label>Requested Date of Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date_Clone__c</fullName>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <label>Requested Ship Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Return_Shipment_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Shipment Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipmentConfirmedOnsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Confirmed Onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShipmentReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <label>Shipped Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipped / Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Static_IP__c</fullName>
        <formula>Account__r.Static__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Static IP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tablet_Prepped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tablet Prepped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeSinceCreation__c</fullName>
        <label>TimeSinceCreation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>Account__r.Time_Zone__c</formula>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalShipmentCost__c</fullName>
        <label>Total Shipment Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shipping Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receiving Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>USPS_Pickup_Deadline__c</fullName>
        <formula>ReqDateofEquipPickup__c + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USPS Pickup Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpdatePlayersOSinQB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Players OS in QB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOMempracExtraPConsite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WO Memprac Extra PC onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WOTotalServiceFeeAmount__c</fullName>
        <label>WO Total Service Fee Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WorkOrderCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work Order - Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkOrderMemberpracticeCity__c</fullName>
        <label>Work Order - Member practice - City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderMemberpracticeDHNID2__c</fullName>
        <label>Work Order - Member practice - DHN ID2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderMemberpracticeDHNID__c</fullName>
        <label>Work Order - Member practice - DHN ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderMemberpracticeState__c</fullName>
        <label>Work Order - Member practice - State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderMemberpracticeStreet2__c</fullName>
        <label>Work Order - Member practice - Street2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderMemberpracticeZip__c</fullName>
        <label>Work Order - Member practice - Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkOrderRecordID__c</fullName>
        <label>Work Order - Record ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of26__c</fullName>
        <label># of 26&quot;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of32__c</fullName>
        <label># of 32&quot;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofMEDIAPLAYERS__c</fullName>
        <label># of MEDIAPLAYERS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofSprint__c</fullName>
        <label># of Sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_attempted_pickups_days__c</fullName>
        <formula>CASE(MOD( TODAY() - DATE(1985,6,24),7), 

0 , CASE( MOD( TODAY() - ReqDateofEquipPickup__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - ReqDateofEquipPickup__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - ReqDateofEquipPickup__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - ReqDateofEquipPickup__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - ReqDateofEquipPickup__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - ReqDateofEquipPickup__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - ReqDateofEquipPickup__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - ReqDateofEquipPickup__c )/7)*5)-1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of days since first pickup attempt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofgroundtagstobeissued__c</fullName>
        <label># of ground tags to be issued</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shipping Order</label>
    <nameField>
        <displayFormat>ShippingOrder-{000000}</displayFormat>
        <label>Shipping Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Orders</pluralLabel>
    <recordTypes>
        <fullName>Receiving_Order</fullName>
        <active>true</active>
        <label>Receiving Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shipping_Order</fullName>
        <active>true</active>
        <label>Shipping Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>